--- a/codigo/index.html
+++ b/codigo/index.html
@@ -108,8 +108,18 @@
   <div class="items_header1 f12 clearfix">
     <div class="wrapper">
       <div class="right">
-        <a href="#" class="ico_contact bor">CONTÁCTENOS</a>
+        <a href="#modal1" class="ico_contact bor" data-toggle="modal">CONTÁCTENOS</a>
         
+        <div class="modal fade" id="modal1">
+            <div class="modal-dialog"> 
+              <div class="modal-content">
+                <div class="modal-header">
+                  <h2 class="modal-title">encabezado</h2>
+                </div>
+              </div>
+            </div>
+        </div>
+
         <a href="javascript:void(0);" class="ico_search">BUSCAR</a>
       </div>
     </div>
