Pagina Quienes Somos

--- a/codigo/index.html
+++ b/codigo/index.html
@@ -198,7 +198,7 @@
               <i class="fas fa-home"></i>&nbsp&nbspINICIO</a>
           </li>
           <li class="l_1">
-            <a href="#" title="">
+            <a href="../codigo/quienessomos.html" title="">
               <i class="fas fa-users"></i>&nbsp&nbspQUIÉNES SOMOS</a>
 
           </li>
