--- a/codigo/quienessomos.html
+++ b/codigo/quienessomos.html
@@ -208,12 +208,16 @@
             <a href="javascript:void(0);" class="linkPro lnkMobile">
               <i class="fas fa-box-open"></i>&nbsp&nbspPRODUCTOS</a>
           </li>
+          <li class="l_1">
+              <a href="#" ><i class="fas fa-cogs"></i>&nbsp&nbspPROCESOS</a>
+              <ul class="submenu">
+                <li><a href="proceso-arroz-azucar.html">ARROZ Y AZUCAR</a></li>
+                <li><a href="proceso-aceite.html">ACEITE</a></li>
+              </ul>
+            </li>
+            <li>
           <li>
-            <a href="#" class="lnkMobile">
-              <i class="fas fa-cogs"></i>&nbsp&nbspPROCESOS</a>
-          </li>
-          <li>
-            <a href="#" title="" class="lnkMobile">
+            <a href="../codigo/blog.html" title="" class="lnkMobile">
               <i class="fas fa-carrot"></i>&nbsp&nbspCOCINA CON NOSOTROS</a>
           </li>
 
