--- a/codigo/index.html
+++ b/codigo/index.html
@@ -34,6 +34,8 @@
   <link href="lib/bootstrap/css/bootstrap.min.css" rel="stylesheet">
   <link href="lib/bootstrap/css/bootstrap2.min.css" rel="stylesheet">
   <link href="css/style.css" rel="stylesheet">
+  <link href="css/camera.css" rel="stylesheet">
+  <link href="js/google-code-prettify/prettify.css" rel="stylesheet">
 
 
   <link rel="stylesheet" href="_/styles/main28b5.css?v=2.0.0">
@@ -50,6 +52,7 @@
   <link rel="stylesheet" href="css/all.css">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/"
     crossorigin="anonymous">
+
 
 
 
@@ -207,7 +210,7 @@
               <i class="fas fa-box-open"></i>&nbsp&nbspPRODUCTOS</a>
           </li>
           <li class="l_1">
-            <a href="#" ><i class="fas fa-cogs"></i>&nbsp&nbspPROCESOS</a>
+            <a href="#"><i class="fas fa-cogs"></i>&nbsp&nbspPROCESOS</a>
             <ul class="submenu">
               <li><a href="proceso-arroz-azucar.html">ARROZ Y AZUCAR</a></li>
               <li><a href="proceso-aceite.html">ACEITE</a></li>
@@ -336,12 +339,7 @@
 
 
   <section id="intro">
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
+
 
   </section>
   <!-- #intro -->
@@ -437,87 +435,306 @@ Nuestra empresa se encarga de empacar y comercializar alimentos con las mejores 
 
   <main id="main">
 
-    <!--==========================
-      About Section
-    ============================-->
+    <div id="testimonials" class="wow fadeInUp">
 
+      <div class="container">
 
-
-    <!--==========================
-      Testimonials Section
-    ============================-->
-    <section id="testimonials" class="wow fadeInUp">
-      <div class="container" style="background-color: #8d0000;">
         <div class="section-header">
-          <h2>BLOG</h2>
-          <p>Entra y visualice nuestros post mas recientes</p>
+          <p class="core85 cyellow f60 tit_quienes">Blog</p>
         </div>
+
         <div class="owl-carousel testimonials-carousel">
 
-          <div class="testimonial-item">
-            <p>
-              <img src="img/quote-sign-left.png" class="quote-sign-left" alt=""> Proin iaculis purus consequat sem cure
-              digni ssim donec porttitora entum suscipit rhoncus. Accusantium quam,
-              ultricies eget id, aliquam eget nibh et. Maecen aliquam, risus at semper.
-              <img src="img/quote-sign-right.png" class="quote-sign-right" alt="">
-            </p>
-            <img src="img/testimonial-1.jpg" class="testimonial-img" alt="">
-            <h3>Arroz Oriental</h3>
 
+          <div style="padding:8px">
+            <div class="clearfix height_banner2 relative banner_border hover_slider ">
+              <div class="borders">
+                <div class="b_top"></div>
+                <div class="b_left"></div>
+                <div class="b_right"></div>
+                <div class="b_bottom"></div>
+              </div>
+              <div class="sli_stop style_dots dots_bottom">
+                <a href="#" class="item_zoom">
+                  <div class="c_grid_image src_return">
+                    <img src="_/images/uploads/calidad.jpg" class="return_parent"> </div>
+                  <div class="content_banner">
+                    <div class="table">
+                      <div class="table-cell">
+                        <div class="width_slider">
+                          <h3 class="core85 f20 line_white align-center">TITULO DE LA NOTICIA</h3>
+                          <p class="align-center">Una breve descripcion de la noticia perteneciente al blog.</p>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="sli_auto">
+                    <div>
+                      <div class="item_zoom">
+                        <div class="c_grid_image src_return">
+                          <img src="_/images/uploads/cropped.jpg" class="return_parent">
+                        </div>
+                      </div>
+                    </div>
+
+                  </div>
+                </a>
+              </div>
+            </div>
           </div>
 
-          <div class="testimonial-item">
-            <p>
-              <img src="img/quote-sign-left.png" class="quote-sign-left" alt=""> Export tempor illum tamen malis malis
-              eram quae irure esse labore quem cillum quid cillum eram malis quorum
-              velit fore eram velit sunt aliqua noster fugiat irure amet legam anim culpa.
-              <img src="img/quote-sign-right.png" class="quote-sign-right" alt="">
-            </p>
-            <img src="img/testimonial-2.jpg" class="testimonial-img" alt="">
-            <h3>Arroz Chino</h3>
 
+          <div style="padding:8px">
+            <div class="clearfix height_banner2 relative banner_border hover_slider">
+              <div class="borders">
+                <div class="b_top"></div>
+                <div class="b_left"></div>
+                <div class="b_right"></div>
+                <div class="b_bottom"></div>
+              </div>
+              <div class="sli_stop style_dots dots_bottom">
+                <a href="#" class="item_zoom">
+                  <div class="c_grid_image src_return">
+                    <img src="_/images/uploads/cropped.jpg" class="return_parent"> </div>
+                  <div class="content_banner">
+                    <div class="table">
+                      <div class="table-cell">
+                        <div class="width_slider">
+                          <h3 class="core85 f20 line_white align-center">TITULO DE LA NOTICIA</h3>
+                          <p class="align-center">Una breve descripcion de la noticia perteneciente al blog.</p>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="sli_auto">
+                    <div>
+                      <div class="item_zoom">
+                        <div class="c_grid_image src_return">
+                          <img src="_/images/uploads/cropped.jpg" class="return_parent">
+                        </div>
+                      </div>
+                    </div>
+
+                  </div>
+                </a>
+              </div>
+            </div>
           </div>
 
-          <div class="testimonial-item">
-            <p>
-              <img src="img/quote-sign-left.png" class="quote-sign-left" alt=""> Enim nisi quem export duis labore
-              cillum quae magna enim sint quorum nulla quem veniam duis minim tempor labore
-              quem eram duis noster aute amet eram fore quis sint minim.
-              <img src="img/quote-sign-right.png" class="quote-sign-right" alt="">
-            </p>
-            <img src="img/testimonial-3.jpg" class="testimonial-img" alt="">
-            <h3>Arros Ruso</h3>
 
+          <div style="padding:8px">
+            <div class="clearfix height_banner2 relative banner_border hover_slider">
+              <div class="borders">
+                <div class="b_top"></div>
+                <div class="b_left"></div>
+                <div class="b_right"></div>
+                <div class="b_bottom"></div>
+              </div>
+              <div class="sli_stop style_dots dots_bottom">
+                <a href="#" class="item_zoom">
+                  <div class="c_grid_image src_return">
+                    <img src="_/images/uploads/calidad.jpg" class="return_parent"> </div>
+                  <div class="content_banner">
+                    <div class="table">
+                      <div class="table-cell">
+                        <div class="width_slider">
+                          <h3 class="core85 f20 line_white align-center">TITULO DE LA NOTICIA</h3>
+                          <p class="align-center">Una breve descripcion de la noticia perteneciente al blog.</p>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="sli_auto">
+                    <div>
+                      <div class="item_zoom">
+                        <div class="c_grid_image src_return">
+                          <img src="_/images/uploads/cropped.jpg" class="return_parent">
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </a>
+              </div>
+            </div>
           </div>
 
-          <div class="testimonial-item">
-            <p>
-              <img src="img/quote-sign-left.png" class="quote-sign-left" alt=""> Fugiat enim eram quae cillum dolore
-              dolor amet nulla culpa multos export minim fugiat minim velit minim dolor
-              enim duis veniam ipsum anim magna sunt elit fore quem dolore labore illum veniam.
-              <img src="img/quote-sign-right.png" class="quote-sign-right" alt="">
-            </p>
-            <img src="img/testimonial-4.jpg" class="testimonial-img" alt="">
-            <h3>Arroz Clasico</h3>
-
+          <div style="padding:8px">
+            <div class="clearfix height_banner2 relative banner_border hover_slider">
+              <div class="borders">
+                <div class="b_top"></div>
+                <div class="b_left"></div>
+                <div class="b_right"></div>
+                <div class="b_bottom"></div>
+              </div>
+              <div class="sli_stop style_dots dots_bottom">
+                <a href="#" class="item_zoom">
+                  <div class="c_grid_image src_return">
+                    <img src="_/images/uploads/calidad.jpg" class="return_parent"> </div>
+                  <div class="content_banner">
+                    <div class="table">
+                      <div class="table-cell">
+                        <div class="width_slider">
+                          <h3 class="core85 f20 line_white align-center">TITULO DE LA NOTICIA</h3>
+                          <p class="align-center">Una breve descripcion de la noticia perteneciente al blog.</p>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="sli_auto">
+                    <div>
+                      <div class="item_zoom">
+                        <div class="c_grid_image src_return">
+                          <img src="_/images/uploads/cropped.jpg" class="return_parent">
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </a>
+              </div>
+            </div>
           </div>
 
-          <div class="testimonial-item">
-            <p>
-              <img src="img/quote-sign-left.png" class="quote-sign-left" alt=""> Quis quorum aliqua sint quem legam
-              fore sunt eram irure aliqua veniam tempor noster veniam enim culpa labore
-              duis sunt culpa nulla illum cillum fugiat legam esse veniam culpa fore nisi cillum quid.
-              <img src="img/quote-sign-right.png" class="quote-sign-right" alt="">
-            </p>
-            <img src="img/testimonial-5.jpg" class="testimonial-img" alt="">
-            <h3>Arroz vegetalessss</h3>
-
+          <div style="padding:8px">
+            <div class="clearfix height_banner2 relative banner_border hover_slider">
+              <div class="borders">
+                <div class="b_top"></div>
+                <div class="b_left"></div>
+                <div class="b_right"></div>
+                <div class="b_bottom"></div>
+              </div>
+              <div class="sli_stop style_dots dots_bottom">
+                <a href="#" class="item_zoom">
+                  <div class="c_grid_image src_return">
+                    <img src="_/images/uploads/calidad.jpg" class="return_parent"> </div>
+                  <div class="content_banner">
+                    <div class="table">
+                      <div class="table-cell">
+                        <div class="width_slider">
+                          <h3 class="core85 f20 line_white align-center">TITULO DE LA NOTICIA</h3>
+                          <p class="align-center">Una breve descripcion de la noticia perteneciente al blog.</p>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="sli_auto">
+                    <div>
+                      <div class="item_zoom">
+                        <div class="c_grid_image src_return">
+                          <img src="_/images/uploads/cropped.jpg" class="return_parent">
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </a>
+              </div>
+            </div>
           </div>
+
+          
+          <div style="padding:8px">
+              <div class="clearfix height_banner2 relative banner_border hover_slider">
+                <div class="borders">
+                  <div class="b_top"></div>
+                  <div class="b_left"></div>
+                  <div class="b_right"></div>
+                  <div class="b_bottom"></div>
+                </div>
+                <div class="sli_stop style_dots dots_bottom">
+                  <a href="#" class="item_zoom">
+                    <div class="c_grid_image src_return">
+                      <img src="_/images/uploads/calidad.jpg" class="return_parent"> </div>
+                    <div class="content_banner">
+                      <div class="table">
+                        <div class="table-cell">
+                          <div class="width_slider">
+                            <h3 class="core85 f20 line_white align-center">TITULO DE LA NOTICIA</h3>
+                            <p class="align-center">Una breve descripcion de la noticia perteneciente al blog.</p>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="sli_auto">
+                      <div>
+                        <div class="item_zoom">
+                          <div class="c_grid_image src_return">
+                            <img src="_/images/uploads/cropped.jpg" class="return_parent">
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                  </a>
+                </div>
+              </div>
+            </div>
+
+
+            <div style="padding:8px">
+                <div class="clearfix height_banner2 relative banner_border hover_slider">
+                  <div class="borders">
+                    <div class="b_top"></div>
+                    <div class="b_left"></div>
+                    <div class="b_right"></div>
+                    <div class="b_bottom"></div>
+                  </div>
+                  <div class="sli_stop style_dots dots_bottom">
+                    <a href="#" class="item_zoom">
+                      <div class="c_grid_image src_return">
+                        <img src="_/images/uploads/calidad.jpg" class="return_parent"> </div>
+                      <div class="content_banner">
+                        <div class="table">
+                          <div class="table-cell">
+                            <div class="width_slider">
+                              <h3 class="core85 f20 line_white align-center">TITULO DE LA NOTICIA</h3>
+                              <p class="align-center">Una breve descripcion de la noticia perteneciente al blog.</p>
+                            </div>
+                          </div>
+                        </div>
+                      </div>
+                      <div class="sli_auto">
+                        <div>
+                          <div class="item_zoom">
+                            <div class="c_grid_image src_return">
+                              <img src="_/images/uploads/cropped.jpg" class="return_parent">
+                            </div>
+                          </div>
+                        </div>
+                      </div>
+                    </a>
+                  </div>
+                </div>
+              </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
         </div>
 
       </div>
-    </section>
+    </div>
     <!-- #testimonials -->
 
 
@@ -525,7 +742,7 @@ Nuestra empresa se encarga de empacar y comercializar alimentos con las mejores 
     <!--==========================
       Contact Section
     ============================-->
-    <section id="contact" class="wow fadeInUp">
+    <div id="contact" class="wow fadeInUp">
       <div class="container">
         <div class="section-header">
           <h2>CONTACTO</h2>
@@ -565,7 +782,7 @@ Nuestra empresa se encarga de empacar y comercializar alimentos con las mejores 
         </div>
       </div>
 
-    </section>
+    </div>
     <!-- #contact -->
 
     <!--
@@ -864,6 +1081,23 @@ Nuestra empresa se encarga de empacar y comercializar alimentos con las mejores 
     <!-- Template Main Javascript File -->
     <script src="js/main.js"></script>
     <script src="js/main2.js"></script>
+    <script src="assets/js/google-code-prettify/prettify.js"></script>
+    <script src="js/camera/camera.min.js"></script>
+    <script src="js/camera/setting.js"></script>
+    <script src="assets/js/jquery-1.8.2.min.js"></script>
+    <script src="assets/js/jquery.easing.1.3.js"></script>
+    <script src="assets/js/google-code-prettify/prettify.js"></script>
+    <script src="assets/js/modernizr.js"></script>
+    <script src="assets/js/bootstrap.js"></script>
+    <script src="assets/js/jquery.elastislide.js"></script>
+    <script src="assets/js/jquery.flexslider.js"></script>
+    <script src="assets/js/jquery.prettyPhoto.js"></script>
+    <script src="assets/js/application.js"></script>
+    <script src="assets/js/hover/jquery-hover-effect.js"></script>
+    <script src="assets/js/hover/setting.js"></script>
+    <script src="assets/js/camera/camera.min.js"></script>
+    <script src="assets/js/camera/setting.js"></script>
+
     <!-- Load Facebook SDK for JavaScript -->
     <div id="fb-root"></div>
     <script>(function (d, s, id) {
