--- a/codigo/blog.html
+++ b/codigo/blog.html
@@ -386,9 +386,9 @@
                                 <br>
                                 <a href="#" class="btn btn-sm btn-success"><span class="glyphicon glyphicon-comment"></span>
                                     Ver receta</a>
-                                <a href="#" class="btn btn-sm btn-primary"><span class="glyphicon glyphicon-thumbs-up"></span>
+                                <a href="#" class="btn btn-sm btn-primary"><i class="far fa-thumbs-up"></i>
                                     Me gusta</a>
-                                <a href="#" class="btn btn-sm btn-info"><span class="glyphicon glyphicon-comment"></span>
+                                <a href="#" class="btn btn-sm btn-info"><i class="far fa-comment"></i>
                                     Comentar</a>
                             </div>
                         </div>
@@ -425,9 +425,9 @@
                                     <br>
                                 <a href="#" class="btn btn-sm btn-success"><span class="glyphicon glyphicon-comment"></span>
                                     Ver receta</a>
-                                <a href="#" class="btn btn-sm btn-primary"><span class="glyphicon glyphicon-thumbs-up"></span>
+                                <a href="#" class="btn btn-sm btn-primary"><i class="far fa-thumbs-up"></i>
                                     Me gusta</a>
-                                <a href="#" class="btn btn-sm btn-info"><span class="glyphicon glyphicon-comment"></span>
+                                <a href="#" class="btn btn-sm btn-info"><i class="far fa-comment"></i>
                                     Comentar</a>
                             </div>
                         </div>
@@ -464,9 +464,9 @@
                                 <br>
                                 <a href="#" class="btn btn-sm btn-success"><span class="glyphicon glyphicon-comment"></span>
                                     Ver receta</a>
-                                <a href="#" class="btn btn-sm btn-primary"><span class="glyphicon glyphicon-thumbs-up"></span>
+                                <a href="#" class="btn btn-sm btn-primary"><i class="far fa-thumbs-up"></i>
                                     Me gusta</a>
-                                <a href="#" class="btn btn-sm btn-info"><span class="glyphicon glyphicon-comment"></span>
+                                <a href="#" class="btn btn-sm btn-info"><i class="far fa-comment"></i>
                                     Comentar</a>
                             </div>
                         </div>
@@ -503,9 +503,9 @@
                                 <br>
                                 <a href="#" class="btn btn-sm btn-success"><span class="glyphicon glyphicon-comment"></span>
                                     Ver receta</a>
-                                <a href="#" class="btn btn-sm btn-primary"><span class="glyphicon glyphicon-thumbs-up"></span>
+                                <a href="#" class="btn btn-sm btn-primary"><i class="far fa-thumbs-up"></i>
                                     Me gusta</a>
-                                <a href="#" class="btn btn-sm btn-info"><span class="glyphicon glyphicon-comment"></span>
+                                <a href="#" class="btn btn-sm btn-info"><i class="far fa-comment"></i>
                                     Comentar</a>
                             </div>
                         </div>
@@ -542,9 +542,9 @@
                                 <br>
                                 <a href="#" class="btn btn-sm btn-success"><span class="glyphicon glyphicon-comment"></span>
                                     Ver receta</a>
-                                <a href="#" class="btn btn-sm btn-primary"><span class="glyphicon glyphicon-thumbs-up"></span>
+                                <a href="#" class="btn btn-sm btn-primary"><i class="far fa-thumbs-up"></i>
                                     Me gusta</a>
-                                <a href="#" class="btn btn-sm btn-info"><span class="glyphicon glyphicon-comment"></span>
+                                <a href="#" class="btn btn-sm btn-info"><i class="far fa-comment"></i>
                                     Comentar</a>
                             </div>
                         </div>
@@ -752,23 +752,17 @@
 
 <footer id="footer">
     <div class="container">
-        <div class="copyright">
-            &copy; Copyright
-            <strong>DASSCOL</strong>. All Rights Reserved
-        </div>
-        <div class="credits">
-            <!--
-          All the links in the footer should remain intact.
-          You can delete the links only if you purchased the pro version.
-          Licensing information: https://bootstrapmade.com/license/
-          Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/buy/?theme=Reveal
-        -->
-            DISEÑADO POR
-            <a href="https://DASSCOL.com/">DASSCOL</a>
-        </div>
+      <div class="copyright">
+        &copy; Copyright
+        <strong>DASSCOL</strong>. All Rights Reserved
+      </div>
+      <div class="credits">
+        <a>DESARROLLADO POR</a>
+        <a href="https://DASSCOL.com/"  class="core85 f15" style="color:greenyellow">DASSCOL</a>
+      </div>
     </div>
-</footer>
-<!-- #footer -->
+  </footer>
+  <!-- #footer -->
 
 
 <!-- Mirrored from www.arrozroa.com/ by HTTrack Website Copier/3.x [XR&CO'2014], Thu, 20 Dec 2018 13:51:09 GMT -->
