--- a/codigo/index.html
+++ b/codigo/index.html
@@ -126,7 +126,6 @@
           <div class="right">
             <div class="container">
               <a href="#modal1" class="ico_contact bor" data-toggle="modal">CONTÁCTENOS</a>
-
               <!-- Creando Modal -->
               <div class="modal fade" id="modal1">
                 <div class="modal-dialog modal-lg">
@@ -630,79 +629,79 @@ Nuestra empresa se encarga de empacar y comercializar alimentos con las mejores 
             </div>
           </div>
 
-          
+
           <div style="padding:8px">
-              <div class="clearfix height_banner2 relative banner_border hover_slider">
-                <div class="borders">
-                  <div class="b_top"></div>
-                  <div class="b_left"></div>
-                  <div class="b_right"></div>
-                  <div class="b_bottom"></div>
-                </div>
-                <div class="sli_stop style_dots dots_bottom">
-                  <a href="#" class="item_zoom">
-                    <div class="c_grid_image src_return">
-                      <img src="_/images/uploads/calidad.jpg" class="return_parent"> </div>
-                    <div class="content_banner">
-                      <div class="table">
-                        <div class="table-cell">
-                          <div class="width_slider">
-                            <h3 class="core85 f20 line_white align-center">TITULO DE LA NOTICIA</h3>
-                            <p class="align-center">Una breve descripcion de la noticia perteneciente al blog.</p>
-                          </div>
+            <div class="clearfix height_banner2 relative banner_border hover_slider">
+              <div class="borders">
+                <div class="b_top"></div>
+                <div class="b_left"></div>
+                <div class="b_right"></div>
+                <div class="b_bottom"></div>
+              </div>
+              <div class="sli_stop style_dots dots_bottom">
+                <a href="#" class="item_zoom">
+                  <div class="c_grid_image src_return">
+                    <img src="_/images/uploads/calidad.jpg" class="return_parent"> </div>
+                  <div class="content_banner">
+                    <div class="table">
+                      <div class="table-cell">
+                        <div class="width_slider">
+                          <h3 class="core85 f20 line_white align-center">TITULO DE LA NOTICIA</h3>
+                          <p class="align-center">Una breve descripcion de la noticia perteneciente al blog.</p>
                         </div>
                       </div>
                     </div>
-                    <div class="sli_auto">
-                      <div>
-                        <div class="item_zoom">
-                          <div class="c_grid_image src_return">
-                            <img src="_/images/uploads/cropped.jpg" class="return_parent">
-                          </div>
+                  </div>
+                  <div class="sli_auto">
+                    <div>
+                      <div class="item_zoom">
+                        <div class="c_grid_image src_return">
+                          <img src="_/images/uploads/cropped.jpg" class="return_parent">
                         </div>
                       </div>
                     </div>
-                  </a>
-                </div>
+                  </div>
+                </a>
               </div>
             </div>
+          </div>
 
 
-            <div style="padding:8px">
-                <div class="clearfix height_banner2 relative banner_border hover_slider">
-                  <div class="borders">
-                    <div class="b_top"></div>
-                    <div class="b_left"></div>
-                    <div class="b_right"></div>
-                    <div class="b_bottom"></div>
-                  </div>
-                  <div class="sli_stop style_dots dots_bottom">
-                    <a href="#" class="item_zoom">
-                      <div class="c_grid_image src_return">
-                        <img src="_/images/uploads/calidad.jpg" class="return_parent"> </div>
-                      <div class="content_banner">
-                        <div class="table">
-                          <div class="table-cell">
-                            <div class="width_slider">
-                              <h3 class="core85 f20 line_white align-center">TITULO DE LA NOTICIA</h3>
-                              <p class="align-center">Una breve descripcion de la noticia perteneciente al blog.</p>
-                            </div>
-                          </div>
-                        </div>
-                      </div>
-                      <div class="sli_auto">
-                        <div>
-                          <div class="item_zoom">
-                            <div class="c_grid_image src_return">
-                              <img src="_/images/uploads/cropped.jpg" class="return_parent">
-                            </div>
-                          </div>
-                        </div>
-                      </div>
-                    </a>
-                  </div>
-                </div>
+          <div style="padding:8px">
+            <div class="clearfix height_banner2 relative banner_border hover_slider">
+              <div class="borders">
+                <div class="b_top"></div>
+                <div class="b_left"></div>
+                <div class="b_right"></div>
+                <div class="b_bottom"></div>
               </div>
+              <div class="sli_stop style_dots dots_bottom">
+                <a href="#" class="item_zoom">
+                  <div class="c_grid_image src_return">
+                    <img src="_/images/uploads/calidad.jpg" class="return_parent"> </div>
+                  <div class="content_banner">
+                    <div class="table">
+                      <div class="table-cell">
+                        <div class="width_slider">
+                          <h3 class="core85 f20 line_white align-center">TITULO DE LA NOTICIA</h3>
+                          <p class="align-center">Una breve descripcion de la noticia perteneciente al blog.</p>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="sli_auto">
+                    <div>
+                      <div class="item_zoom">
+                        <div class="c_grid_image src_return">
+                          <img src="_/images/uploads/cropped.jpg" class="return_parent">
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </a>
+              </div>
+            </div>
+          </div>
 
 
 
@@ -1119,14 +1118,8 @@ Nuestra empresa se encarga de empacar y comercializar alimentos con las mejores 
       <strong>DASSCOL</strong>. All Rights Reserved
     </div>
     <div class="credits">
-      <!--
-          All the links in the footer should remain intact.
-          You can delete the links only if you purchased the pro version.
-          Licensing information: https://bootstrapmade.com/license/
-          Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/buy/?theme=Reveal
-        -->
-      DISEÑADO POR
-      <a href="https://DASSCOL.com/">DASSCOL</a>
+      <a>DESARROLLADO POR</a>
+      <a href="https://DASSCOL.com/"  class="core85 f15" style="color:greenyellow">DASSCOL</a>
     </div>
   </div>
 </footer>
