--- a/codigo/proceso-aceite.html
+++ b/codigo/proceso-aceite.html
@@ -499,23 +499,17 @@
 
 <footer id="footer">
     <div class="container">
-        <div class="copyright">
-            &copy; Copyright
-            <strong>DASSCOL</strong>. All Rights Reserved
-        </div>
-        <div class="credits">
-            <!--
-          All the links in the footer should remain intact.
-          You can delete the links only if you purchased the pro version.
-          Licensing information: https://bootstrapmade.com/license/
-          Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/buy/?theme=Reveal
-        -->
-            DISEÑADO POR
-            <a href="https://DASSCOL.com/">DASSCOL</a>
-        </div>
+      <div class="copyright">
+        &copy; Copyright
+        <strong>DASSCOL</strong>. All Rights Reserved
+      </div>
+      <div class="credits">
+        <a>DESARROLLADO POR</a>
+        <a href="https://DASSCOL.com/"  class="core85 f15" style="color:greenyellow">DASSCOL</a>
+      </div>
     </div>
-</footer>
-<!-- #footer -->
+  </footer>
+  <!-- #footer -->
 
 
 <!-- Mirrored from www.arrozroa.com/ by HTTrack Website Copier/3.x [XR&CO'2014], Thu, 20 Dec 2018 13:51:09 GMT -->
