--- a/codigo/quienessomos.html
+++ b/codigo/quienessomos.html
@@ -528,14 +528,8 @@
       <strong>DASSCOL</strong>. All Rights Reserved
     </div>
     <div class="credits">
-      <!--
-          All the links in the footer should remain intact.
-          You can delete the links only if you purchased the pro version.
-          Licensing information: https://bootstrapmade.com/license/
-          Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/buy/?theme=Reveal
-        -->
-      DISEÑADO POR
-      <a href="https://DASSCOL.com/">DASSCOL</a>
+      <a>DESARROLLADO POR</a>
+      <a href="https://DASSCOL.com/"  class="core85 f15" style="color:greenyellow">DASSCOL</a>
     </div>
   </div>
 </footer>
