publicaciones del blog

--- a/codigo/index.html
+++ b/codigo/index.html
@@ -454,15 +454,15 @@ Nuestra empresa se encarga de empacar y comercializar alimentos con las mejores 
                 <div class="b_bottom"></div>
               </div>
               <div class="sli_stop style_dots dots_bottom">
-                <a href="#" class="item_zoom">
+                <a href="publicacion\arroz-turco.html" class="item_zoom">
                   <div class="c_grid_image src_return">
-                    <img src="_/images/uploads/calidad.jpg" class="return_parent"> </div>
+                    <img src="_/images/uploads/turco.jpg" class="return_parent"> </div>
                   <div class="content_banner">
                     <div class="table">
                       <div class="table-cell">
                         <div class="width_slider">
-                          <h3 class="core85 f20 line_white align-center">TITULO DE LA NOTICIA</h3>
-                          <p class="align-center">Una breve descripcion de la noticia perteneciente al blog.</p>
+                          <h3 class="core85 f20 line_white align-center">ARROZ TURCO</h3>
+                          <p class="align-center">Para que lo prepares en casa y te deleites con sus sabores exquisitos.</p>
                         </div>
                       </div>
                     </div>
@@ -471,7 +471,7 @@ Nuestra empresa se encarga de empacar y comercializar alimentos con las mejores 
                     <div>
                       <div class="item_zoom">
                         <div class="c_grid_image src_return">
-                          <img src="_/images/uploads/cropped.jpg" class="return_parent">
+                          <img src="_/images/uploads/calidad.jpg" class="return_parent">
                         </div>
                       </div>
                     </div>
