--- a/codigo/blog.html
+++ b/codigo/blog.html
@@ -345,7 +345,7 @@
 
         <div>
             <div class="wrapper padding-h">
-                <h2 class="core85 cyellow f48 tit_quienes">Blog <a class="core85 cyellow f32" > - Sección de recetas</a></h2>
+                <h2 class="core85 cyellow f48 tit_quienes">Blog <a class="core85 cyellow f32"> - Sección de recetas</a></h2>
 
 
 
@@ -365,8 +365,8 @@
                                         <div class="b_right"></div>
                                         <div class="b_bottom"></div>
                                     </div>
-                                    <a href="#" class="item_zoom">
-                                        <img class="img-fluid" src="_/images/uploads/cards1.png" class="return_parent">
+                                    <a href="publicacion\arroz-turco.html" class="item_zoom">
+                                        <img class="img-fluid" src="_/images/uploads/turco 940x748.jpg" class="return_parent">
 
 
                                     </a>
@@ -374,15 +374,12 @@
                                 <p class="lead  text-center" style="color:white">11 Enero 2019 </p>
                             </div>
                             <div class="col-9">
-                                <a href="#">
-                                    <h3 class="core85 f25">Lorem ipsum titutudolor sit amet.</h3>
+                                <a href="publicacion\arroz-turco.html">
+                                    <h3 class="core85 f25">Arroz Turco</h3>
                                 </a>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Praesentium ipsum,
-                                    similique
-                                    debitis saepe soluta, vero provident ab atque fuga molestias magni repellat labore
-                                    adipisci! Sapiente deleniti numquam minus adipisci reiciendis at, assumenda odit
-                                    itaque
-                                    tempore voluptas, repellat sequi ab quibusdam.</p>
+                                <p>El arroz es un ingrediente muy tradicional en la mesa, te compartimos esta fácil
+                                    receta de arroz turco para que prepares en casa y te deleites con sus sabores
+                                    exquisitos y diferentes.</p>
                                 <br>
                                 <a href="#" class="btn btn-sm btn-success"><span class="glyphicon glyphicon-comment"></span>
                                     Ver receta</a>
